--- a/JWTRkDemo/JWTRkDemo.csproj
+++ b/JWTRkDemo/JWTRkDemo.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
+  </ItemGroup>
+
 
 </Project>
